#s wa Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#958] Two new libraries for NSE.
  - punycode
  - idna
  [Rewanth Cool]

o [NSE] New fingerprints for http-enum:
  - [GH#954] Telerik UI CVE-2017-9248 [Harrison Neal]
  - [GH#767] Many WordPress version detections [Rewanth Cool]

o [NSE] http-trane-info obtains information from Trane Tracer SC controllers
  and connected HVAC devices. [Pedro Joaquin]

o [GH#981][GH#984][GH#996][GH#975] Fixed Ncat proxy authentication issues:
  - Usernames and/or passwords could not be empty
  - Passwords could not contain colons
  - SOCKS5 authentication was not properly documented
  - SOCKS5 authentication had a memory leak
  [nnposter]

o [GH#1009][GH#1013] Fixes to autoconf header files to allow autoreconf to be
  run. [Lukas Schwaighofer]

o [NSE] deluge-rpc-brute performs brute-force credential testing against Deluge
  BitTorrent RPC services, using the new zlib library. [Claudiu Perta]

o [GH#977] Improved DNS service version detection coverage and consistency
  by using data from a Project Sonar Internet wide survey. Numerouse false
  positives were removed and reliable softmatches added. Match lines for
  version.bind responses were also conslidated using the technique below.
  [Tom Sellers]

o [GH#977] Changed version probe fallbacks so as to work cross protocol
  (TCP/UDP). This enables consolidating match lines for services where the
  responses on TCP and UDP are similar. [Tom Sellers]

o [NSE][GH#532] Added zlib library for NSE. This was a leftover project from
  GSOC 2014, and will be very useful. [Claudiu Perta, Daniel Miller]

o [NSE][GH#1004] Fixed handling of brute.retries variable. It was being treated
  as the number of tries, not retries, and a value of 0 would result in
  infinite retries. Instead, it is now the number of retries, defaulting to 2
  (3 total tries), with no option for infinite retries.

o [NSE][GH#987] Adds smb-enum-services.nse. It retrieves the list of services